Stop the output-display from overflowing and added padding-left

--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,6 @@ body {
     border-radius: 15px;
     margin: 2rem auto;
     padding: 0 1rem 1rem 1rem;
-    overflow: hidden;
     background: var(--calculator-bg-color);
     box-shadow: 0px 0px 33px 4px rgba(2,48,59,1);
 }
@@ -49,6 +48,11 @@ body {
     padding-block-start: 0.25rem;
     padding-block-end: 0.25rem;
     padding-inline-end: 0.75rem; 
+}
+
+.output-display {
+    overflow: hidden;
+    padding-left: 5px;
 }
 
 /* Use CSS Grid here */
